# Cost_Aware_LLM_Proj

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  README.md
.claude/agents/: agent-runtime-architect.md  api-contract-architect.md  behavior-preservation-checker.md  cli-interface-reviewer.md  database-persistence-reviewer.md  embeddings-retrieval-reviewer.md  principal-system-architect.md  provider-integration-reviewer.md  python-packaging-reviewer.md  qa-sdet-lead.md  refactor-test-strategist.md  refactoring-readability-reviewer.md  security-architect.md  slop-hunter.md
.claude/skills/agent-routing/: SKILL.md
.claude/skills/benchmark-scorecard-design/: SKILL.md
.claude/skills/branch-migration-planning/: SKILL.md
.claude/skills/cache-tier-design/: SKILL.md
.claude/skills/code-simplicity-review/: SKILL.md
.claude/skills/dependency-slimming-review/: SKILL.md
.claude/skills/engineering-review-board/: SKILL.md
.claude/skills/implementation-plan-review/: SKILL.md
.claude/skills/model-source-design/: SKILL.md
.claude/skills/post-change-review/: SKILL.md
.claude/skills/product-direction-guard/: SKILL.md
.claude/skills/qa-bug-hunt/: SKILL.md
.claude/skills/readme-product-docs-review/: SKILL.md
.claude/skills/refactor-readability/: SKILL.md
.claude/skills/release-readiness-review/: SKILL.md
.claude/skills/routing-policy-design/: SKILL.md
.claude/skills/system-design-review/: SKILL.md
.claude/skills/tui-product-experience-review/: SKILL.md
agent/: __init__.py  config.py  dispatcher.py  loop.py  macro_expander.py  planner.py  sandbox.py  tool_logging.py
agent/tools/: __init__.py  execution.py  file_io.py  search.py
cli/: main.py
cli/commands/: accounts.py  agent.py  benchmark.py  cache.py  connect.py  model.py  route.py  shell.py  trace.py
cli/tui/: app.py  dispatcher.py  style.tcss  widgets.py
core/: benchmark.py  cache.py  classifier.py  cost_estimator.py  llm_turn.py  model_selector.py  policy.py  reasons.py  router.py  semantic_cache.py  validator.py
db/: models.py  session.py
db/repositories/: accounts.py  cache.py  models.py  tool_calls.py  traces.py
docs/: UPGRADE.md
docs/architecture/: ORCHESTRATOR_V2_ARCHITECTURE.md
docs/architecture/decisions/: ADR-001-LOCAL_FIRST_BENCHMARK_ROUTING_WORKBENCH.md
docs/audits/: V0_2_LOCAL_RUN_VERIFICATION.md
docs/development/: CLAUDE_LOCAL_TEMPLATE.md
docs/product/: MVP_V2_SCOPE.md  NEXT_STEPS.md  OVERVIEW.md  PRODUCT_DIRECTION.md
docs/roadmap/: BRANCH_ROADMAP.md
embeddings/: __init__.py  embedder.py  model_cache.py
providers/: base.py  ollama.py  openai_compatible.py  source.py
providers/anthropic/: adapter.py  connector.py
providers/gemini/: adapter.py  connector.py
providers/groq/: adapter.py  connector.py
providers/openai/: adapter.py  connector.py
schemas/: account.py  routing.py  tools.py  trace.py
services/: account_service.py  benchmark_service.py  config_service.py  connect_service.py  init_service.py  model_service.py  routing_service.py  trace_service.py
skills/: README.md
skills/add-provider/: SKILL.md
skills/branch-pr-discipline/: SKILL.md
skills/cache-safety-playbook/: SKILL.md
skills/macro-hand-sign-dsl/: SKILL.md
skills/strict-workflow/: SKILL.md
skills/token-efficiency-protocol/: SKILL.md
tests/: test_account_service.py  test_agent_dispatcher.py  test_agent_loop.py  test_agent_loop_macro_expander.py  test_agent_phase1.py  test_agent_security.py  test_auto_policy.py  test_benchmark.py  test_classifier.py  test_cli_agent_help.py  test_cli_connect.py  test_cli_connect_env_key.py  test_cli_help_groups.py  test_cli_list_shortcut.py  test_cli_main.py  test_cli_route_command.py  test_cost_estimator.py  test_exact_cache.py  test_execution_shell_blocked.py  test_gemini_adapter_tools.py  test_init_provider_picker.py  test_llm_turn_providers.py  test_local_source_smoke.py  test_macro_expander.py  test_model_registry.py  test_model_selector.py  test_model_source.py  test_openai_adapter_tools.py  test_packaging.py  test_policy.py  test_provider_fallback_honesty.py  test_providers_groq_gemini.py  test_router.py  test_routing_seam.py  test_semantic_cache.py  test_setup_interactive.py  test_setup_ui.py  test_sources.py  test_tui_app.py  test_tui_dispatcher.py
tests/tests_e2e_cli_simulation/: conftest.py  test_benchmark_cli.py  test_connect_flows.py  test_env_and_dotenv_behavior.py  test_error_handling_and_invalid_input.py  test_help_commands.py  test_macro_expansion_flows.py  test_output_styles_and_ci_modes.py
utils/: console.py  crypto.py  env.py  hashing.py  setup_interactive.py  setup_ui.py
