[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator-cli"
version = "0.1.0"
description = "Cost-aware LLM orchestration with semantic caching, multi-provider routing, and sandboxed agent tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "qdrant-client>=1.9",
    "sentence-transformers>=2.7",
    "httpx>=0.27",
    "cryptography>=42.0",
    "rich>=13.0",
    "tomllib; python_version < '3.11'",
    "anthropic>=0.28",
    "openai>=1.30",
    "google-genai>=1.0",
]

[project.scripts]
orchestrator = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["cli", "services", "core", "providers", "db", "embeddings", "schemas", "utils", "agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
