[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator-cli"
version = "0.2.0"
description = "Local-first CLI to benchmark and route prompts across local and cloud LLMs by cost and capability, with an exact-match cache and experimental sandboxed agent tools"
readme = "README.md"
requires-python = ">=3.11"
# Base stays light: routing, the exact-match cache, persistence, and the CLI
# run on these alone. Provider SDKs, the TUI, and the semantic-cache stack are
# optional extras, loaded lazily only when actually used. See README install
# section and docs/roadmap/BRANCH_ROADMAP.md (slim-deps branch).
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
]

[project.scripts]
orchestrator = "cli.main:app"

[project.optional-dependencies]
# Immersive Textual TUI and the interactive provider picker.
tui = [
    "textual>=0.70",
    "questionary>=2.0",
]
# Per-provider SDKs (connectors/discovery use httpx; only generate() needs these).
openai = [
    "openai>=1.30",
]
anthropic = [
    "anthropic>=0.28",
]
gemini = [
    "google-genai>=1.0",
]
# All cloud provider SDKs at once. groq routes through the openai SDK, so it
# needs no separate extra.
providers = [
    "openai>=1.30",
    "anthropic>=0.28",
    "google-genai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]
# Everything optional at runtime (tui + providers). The legacy heavy semantic
# cache (sentence-transformers + qdrant-client) was removed; a lighter semantic
# cache is planned as future work (semantic-cache-v2). Use ".[all,dev]" to run
# the full test suite.
all = [
    "textual>=0.70",
    "questionary>=2.0",
    "openai>=1.30",
    "anthropic>=0.28",
    "google-genai>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cli", "services", "core", "providers", "db", "schemas", "utils", "agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
